Fix formatting issues in info.html

--- a/info.html
+++ b/info.html
@@ -97,7 +97,7 @@
                 <p>Ang External Hardware (tinatawag ding Peripherals) ay ang mga pisikal na kagamitan na nakakabit sa labas ng kompyuter. Ang mga ito ay ginagamit upang magpasok ng impormasyon (Input, tulad ng keyboard at mouse) o magpakita ng resulta (Output, tulad ng monitor at printer).</p>
                 
                 <div class="item">
-                    <img src="Images/keyboard.jpg" alt="" class="img">
+                    <img src="Images/Keyboard.jpg" alt="" class="img">
                     <div class="paragraph">
                         <h3 class="item-name">Keyboard</h3>
                         <p>Ang keyboard ay isang input device na binubuo ng mga tecla o keys na ginagamit upang mag-type ng letra, numero, simbolo, at mga utos papasok sa kompyuter, kaya’t napakahalaga nito sa paggawa ng dokumento, paglalagay ng datos, at pag-navigate sa mga programa.<p>
@@ -219,5 +219,6 @@
     <script src="script.js"></script>
     
 </body>
+
 
 </html>
